# car-logos-dataset

./: config.py  pyproject.toml
scripts/: optimize.py  scraper.py
